ba4ea40078e66fd442e5bc701bc57de9ff8f2766 Fix: Alignment for sort icons in number and date columns in Bootstrap
https://datatables.net/forums/discussion/80889

Sync to source repo @ba4ea40078e66fd442e5bc701bc57de9ff8f2766

--- a/css/dataTables.bootstrap.css
+++ b/css/dataTables.bootstrap.css
@@ -602,7 +602,7 @@ table.dataTable.table-condensed > thead > tr td.dt-ordering-desc span.dt-column-
 table.dataTable.table-condensed > thead > tr th.dt-type-date span.dt-column-order, table.dataTable.table-condensed > thead > tr th.dt-type-numeric span.dt-column-order,
 table.dataTable.table-condensed > thead > tr td.dt-type-date span.dt-column-order,
 table.dataTable.table-condensed > thead > tr td.dt-type-numeric span.dt-column-order {
-  right: 4px;
+  left: 4px;
 }
 
 div.dt-scroll-head table.table-bordered {
